# payguard

./: .env.example  .gitignore  DECISIONS.md  DEMO_SCRIPT.md  LICENSE  Makefile  README.md  docker-compose.yml  run.sh
backend/: Dockerfile  pyproject.toml
backend/app/: __main__.py  audit_service.py  config.py  cost_tracker.py  db.py  embeddings.py  graphql_schema.py  llm.py  main.py  rest_routes.py  seed.py
backend/app/agents/: behavior_agent.py  orchestrator.py  synthesis_agent.py  triage_agent.py
backend/app/agents/prompts/: behavior.txt  synthesis.txt  triage.txt
backend/app/mcp_servers/: customer_profile.py  evidence_writer.py  rules_engine.py  similar_fraud_search.py  transaction_lookup.py
backend/app/retrieval/: hybrid.py  opensearch_store.py  pgvector_store.py  qdrant_store.py
backend/tests/: test_smoke.py
benchmarks/: __main__.py  rules_baseline.py  run_benchmark.py
benchmarks/results/: comparison.csv  summary.json
data/: fetch_or_generate.py  fraud_scenarios.json
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: route.ts
frontend/app/benchmarks/: page.tsx
frontend/app/investigate/[id]/: page.tsx
frontend/components/: AgentTimeline.tsx  ApprovalGate.tsx  EvidencePanel.tsx
streamlit_app/: Dockerfile  app.py
